force-app/main/default/objects/B2B_Campaign__c/B2B_Campaign__c.object-meta.xml
<CustomObject>
    <label>Client Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>