force-app/main/default/objects/B2B_Campaign__c/fields/Est_Annual_Gross_Sales__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_Gross_Sales__c</fullName>
    <label>Est Annual Gross Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>