force-app/main/default/objects/B2B_Campaign__c/fields/Est_Single_Camp_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Est_Single_Camp_Enrollments__c</fullName>
    <label>Est Single Camp Enrollments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>