force-app/main/default/objects/B2B_Campaign__c/fields/Estimated_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Conversion_Rate__c</fullName>
    <inlineHelpText>Enter a value</inlineHelpText>
    <label>Estimated Conversion Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>