force-app/main/default/objects/B2B_Campaign__c/fields/Estimated_Monthly_Sales__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Sales__c</fullName>
    <description>Calculates the estimated monthly sales.</description>
    <label>Estimated Monthly Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>