force-app/main/default/objects/B2B_Campaign__c/fields/Estimated_of_Annual_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Estimated_of_Annual_Campaigns__c</fullName>
    <inlineHelpText>Enter a value</inlineHelpText>
    <label>Estimated # of Annual Campaigns</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>