force-app/main/default/objects/B2B_Campaign__c/fields/Gross_List_Size__c.field-meta.xml
<CustomField>
    <fullName>Gross_List_Size__c</fullName>
    <label>Gross List Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>