force-app/main/default/objects/B2B_Campaign__c/fields/Net_Marketable_Names_SNS__c.field-meta.xml
<CustomField>
    <fullName>Net_Marketable_Names_SNS__c</fullName>
    <inlineHelpText>Enter a value</inlineHelpText>
    <label>Net Marketable Names / SNS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>