force-app/main/default/objects/B2B_Campaign__c/fields/Number_of_Customers_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Customers_Serviced__c</fullName>
    <inlineHelpText>How many customers will they sell to monthly?</inlineHelpText>
    <label>Number of Customers Serviced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>