force-app/main/default/objects/B2B_Campaign__c/fields/NumberSent__c.field-meta.xml
<CustomField>
    <fullName>NumberSent__c</fullName>
    <label>Annualized Marketable Universe in Camp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>