force-app/main/default/objects/B2B_Campaign__c/fields/One_Time_Campaign_Costs__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Campaign_Costs__c</fullName>
    <inlineHelpText>Enter a value</inlineHelpText>
    <label>One Time Campaign Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>