force-app/main/default/objects/B2B_Campaign__c/fields/Single_Camp_One_Time_Setup_Costs__c.field-meta.xml
<CustomField>
    <fullName>Single_Camp_One_Time_Setup_Costs__c</fullName>
    <label>Single Camp One-Time Setup Costs</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>