force-app/main/default/objects/B2B_Campaign__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homeowners</fullName>
            </value>
            <value>
                <fullName>Renters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>