force-app/main/default/objects/B2B_Campaign__c/recordTypes/BD_Campaign.recordType-meta.xml
<RecordType>
    <fullName>BD_Campaign</fullName>
    <active>true</active>
    <label>BD Campaign</label>
</RecordType>