force-app/main/default/objects/B2B_Campaign__c/recordTypes/PON_Campaign.recordType-meta.xml
<RecordType>
    <fullName>PON_Campaign</fullName>
    <active>true</active>
    <label>PON Campaign</label>
</RecordType>