force-app/main/default/objects/B2B_Campaign__c/listViews/My_Client_Campaigns.listView-meta.xml
<ListView>
    <fullName>My_Client_Campaigns</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Client Campaigns</label>
</ListView>